# rules-enrichment-daemon

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  examples.http  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_seed_bulk_rules.py  0003_seed_longtail_rules.py
openshift/: README.md  deploy-rules-enrichment-daemon-dfn.ps1  deploy-rules-enrichment-daemon.ps1
openshift/dev/: 01-rules-enrichment-daemon-is-dev.yaml  02-rules-enrichment-daemon-bc-dev.yaml  03-daemon-postgres-secret-dev.yaml  04-daemon-postgres-pvc-dev.yaml  05-daemon-postgres-d-dev.yaml  06-daemon-postgres-service-dev.yaml  07-rules-daemon-configmap-dev.yaml  08-rules-daemon-secret-dev.yaml  09-rules-daemon-d-dev.yaml  10-rules-daemon-health-service-dev.yaml  11-rules-daemon-health-route-dev.yaml  12-rules-daemon-migrate-job-dev.yaml
openshift/test/: 01-rules-enrichment-daemon-is-test.yaml  02-rules-enrichment-daemon-bc-test.yaml  03-daemon-postgres-secret-test.yaml  04-daemon-postgres-pvc-test.yaml  05-daemon-postgres-d-test.yaml  06-daemon-postgres-service-test.yaml  07-rules-daemon-configmap-test.yaml  08-rules-daemon-secret-test.yaml  09-rules-daemon-d-test.yaml  10-rules-daemon-health-service-test.yaml  11-rules-daemon-health-route-test.yaml  12-rules-daemon-migrate-job-test.yaml
src/app/: bootstrap.py  main.py
src/app/config/: settings.py
tests/: conftest.py
tests/contract/: test_payload_contract.py
tests/integration/: test_repositories.py
tests/unit/: test_payload_builder.py  test_rule_engine.py
(+63 files in other folders)
