[project]
name = "rules-enrichment-daemon"
version = "0.1.0"
description = "Rules enrichment daemon for external WMS-compatible APIs"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ecs-logging>=2.2.0,<3.0.0",
  "typer>=0.12.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pyodbc>=5.1.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "respx>=0.21.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
]

[project.scripts]
run-daemon = "app.interfaces.cli.main:run_daemon"
publish-outbox = "app.interfaces.cli.main:publish_outbox"
seed-rules = "app.interfaces.cli.main:seed_rules"
replay-dead-letter = "app.interfaces.cli.main:replay_dead_letter"
health-check = "app.interfaces.cli.main:health_check"
validate-rules = "app.interfaces.cli.main:validate_rules"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"
